@@ -1,3 +1,8 @@
+2025-12-18  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* GPLv2: New file.
+	* glilypond.am (EXTRA_DIST): Ship it.
+
 2024-01-04  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* glilypond.pl (BEGIN): Trivially refactor; simplify code.
